2016-05-03  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/stylelib/typhon.mplstyle:

	Improved the overall look of the typhon style sheet. Changes include grid
	settings, adjusted linewidths and fine tuned scientific notation limits.

2016-05-02  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/griddedfield.py, typhon/arts/scattering.py:

	Added convenience method to_atmlab_dict to GriddedField,
	ScatteringMetaData and SingleScatteringData.

2016-05-02  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/__init__.py: Import matplotlib.style

	* typhon/plots/tests: Tests for the plots package.

	* typhon/plots/tests/test_mplstyles.py:

	Module to provide test functions. Currently containing
	test_install_mplstyle() to check if all mplstyles get installed.

2016-05-02  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.2.15 Release.

	* MANIFEST.in: Add xml.bin test files.

2016-05-02  Oliver Lemke  <olemke@core-dump.info>

	* MANIFEST.in: Add mplstyle and xml test files.

2016-04-29  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2016-04-29  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.2.12 Release.

2016-04-29  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py, setup.py:

	Previous fix didn't work. Of course an import of typhon.version also
	imports typhon/__init__.py. *duh*

	Next try: Add a flag __TYPHON_SETUP__ to builtins in setup.py and set
	it to True. This way __init__.py can determine if it is imported
	normally or during setup process. During setup, only __version__ is
	provided and all other imports are omitted.

	* typhon/version.py: Use 'dev' instead of 'unknown'.

2016-04-29  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

	* ChangeLog: Corrections to previous entries.

2016-04-29  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.2.11 Release.
