@@ -5,3 +5,8 @@ typhon.plots
     :members:
     :undoc-members:
     :show-inheritance:
+
+Typhon style sheet
+^^^^^^^^^^^^^^^^^^
+.. plot:: pyplots/stylesheet_gallery.py
+    :include-source:
